# integration-examples

./: Makefile  README.md
example-cloudflare-worker/: .gitignore  inline.js  package-lock.json  package.json  wrangler.toml
example-cloudflare-worker/src/: index.js
example-fastly-full/: Cargo.toml  README.md  fastly.toml
example-fastly-full/src/: main.rs
example-fastly-rust/: Cargo.toml  fastly.toml
example-fastly-rust/src/: main.rs
example-fastly-vcl/: service.vcl
example-go/: main.go
example-python/: server.py
public/: article.html
public/full/: article.html
static/: account.html  article0.html  article1.html  aside-login.tmpl  aside.tmpl  build.py  index.html  main.tmpl
static/full/: article0.html  article1.html
