[package]
name = "fastly-compute-project"
version = "0.1.0"
authors = []
edition = "2018"
# Remove this line if you want to be able to publish this crate as open source on crates.io.
# Otherwise, `publish = false` prevents an accidental `cargo publish` from revealing private source.
publish = false

[profile.release]
debug = 1

[dependencies]
base64 = "0.21.7"
chrono = "0.4.34"
fastly = "0.9.8"
hex = "0.4.3"
hmac-sha256 = "1.1.7"
serde_json = "1.0.114"
urlencoding = "2.1.3"
